python/testData/inspections/PyUnresolvedReferencesInspection/unusedUnresolvedModuleImported.py
<warning descr="Unused import statement 'import spam'">import <error descr="No module named 'spam'">spam</error></warning>
